# pendroid-linux

./: Cargo.toml
src/: adb_tracker.rs  cli.rs  connect_ws.rs  logging.rs  main.rs  setup_autolaunch.rs  setup_daemonize.rs  setup_logging.rs
src/backend/: mod.rs
src/backend/evdev/: event_list.rs  finger.rs  mod.rs  stylus.rs  with_abs.rs
src/parse/: finger.rs  init.rs  mod.rs  stylus.rs
