[package]
name = "pendroid-linux"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
bytebuffer = "2.3.0"
evdev = "0.13.1"
futures = "0.3.31"
qwreey-utility-rs = "0.1.7"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
utf8_iter = "1.0.4"
adb_client = "2.1.16"
futures-util = "0.3.31"
tokio-websockets = { version = "0.12.1", features = ["client", "rand", "openssl"] }
http = "1.3.1"
daemonize = "0.5.0"
auto-launch = "0.5.0"
