[package]
name = "pendroid-linux"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = "fat"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
qwreey-utility-rs = "0.1.7"

bytebuffer = "2.3.0"
evdev = "0.13.2"
adb_client = "2.1.16"
tokio-websockets = { version = "0.12.1", features = ["client", "fastrand", "openssl"] }
http = "1.3.1"
daemonize = "0.5.0"
auto-launch = "0.5.0"
